# prebuilt-catch2

./: .travis.yml  CMakeLists.txt  README.md  conanfile.py
.travis/: install.sh
test/: CMakeLists.txt  test.cpp
